--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   
-<title>S42.site</title>
+<title>S42 Portfolio</title>
 <header>
 
 <h1>
@@ -18,9 +18,63 @@
 </header>
 
  </head> 
+ <style>
+ @import url('https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Sora:wght@600&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Sora:wght@600&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@600&display=swap');
+ * {
+     margin: 0;
+     padding: 0;
+     scroll-behavior: smooth;
+ }
+ body {
+     width: 100%;
+     height: 100%;
+     background-color: black;
+     color: white;
+
+ }
+ *::-webkit-scrollbar-track {
+            border-radius: 5px;
+            background-color: #171824;
+        }
+        *::-webkit-scrollbar {
+            border-radius: 5px;
+            width: 8px;
+        }
+        *::-webkit-scrollbar-thumb {
+            border-radius: 5px;
+            background-color: #0080ff;
+        }
+        #container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .noselect {
+            -webkit-touch-callout: none; /* iOS Safari */
+              -webkit-user-select: none; /* Safari */
+               -khtml-user-select: none; /* Konqueror HTML */
+                 -moz-user-select: none; /* Old versions of Firefox */
+                  -ms-user-select: none; /* Internet Explorer/Edge */
+                      user-select: none; /* Non-prefixed version, currently
+                                            supported by Chrome, Edge, Opera and Firefox */
+        }
+
+</style>
+<script>
+  const sleep = (milliseconds) => {
+      return new Promise(resolve => setTimeout(resolve, milliseconds))
+  }
+</script>
+
+
 
  <body>
-
 
 
       <main>
@@ -61,12 +115,6 @@
   
   h1 {
     margin: 0;
-  }
-  
-  body {
-    margin-top: 20px;
-    background-color: gray;
-    background-image: image-set();
   }
   </style>
   
