--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 
 <head>
 
-<title>S42 Portfolio</title>
+<title> 
+    S42 Portfolio
+</title>
+<link rel="icon" href="https://github.com/S42yt/assets/blob/bb9fa1446332d03998d54942a23ecbe01b841bee/assets/pfp.jpg" type="image/x-icon">
+
 <header>
 
     <div class="ichfickemeineleben">S42.site</div>
@@ -183,6 +187,16 @@
             </div>
             </div>
           </div>
+
+          <div id="animated-border-box">
+            <img src="https://github.com/realChriss/gAssets/blob/main/assets/logo.png">
+          <div> 
+         <a href="https://biogg.net" class="biogg" target="_blank">Biogg.net</a>
+        </div>
+         <div>
+                <a>made by <a href="https://chriss.cyou" class="chriss" target="_blank">Chriss</a></a>
+            </div>
+        </div>
       </main>
 
  </body>
@@ -350,7 +364,7 @@
             margin-bottom: 10x;
         }
         #skillsss > div {
-            font-size: 10px;
+            font-size: 13px;
             padding: 10px 15px;
         font-family: "Mukta";
         }
@@ -375,29 +389,90 @@
         transition: 0.2s ease-out;
         transition-property: box-shadow, transform;
     }
-    .animated-border-box {
+    #animated-border-box {
     position: relative;
-    width: 150px; /* Original width */
-    height: 150px; /* Original height */
+    width: 200px; /* Original width */
+    height: 200px; /* Original height */
     margin: 20px;
     border-radius: 10px;
     overflow: hidden;
+    place-content: center;
+    display: grid;
+    transition: box-shadow 0.3s ease;
+    transition-property: box-shadow, transform;
+    text-align: center;
+    margin-bottom: 20px;	
 }
 
-.animated-border-box:before {
+#animated-border-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: transform 0.3s ease;
+}
+
+#animated-border-box:hover img {
+    transform: scale(1.1);
+}
+
+#animated-border-box > div {
+
+    font-size: 14px;
+    font-family: "Mukta";
+    text-decoration: none;
+}
+#animated-border-box > div > a {
+
+font-size: 10px;
+font-family: "Mukta";
+}
+#animated-border-box > div > .chriss {
+
+font-size: 10px;
+font-family: "Mukta";
+text-decoration: none;
+color: #2eb6e0;
+}
+#animated-border-box > div > .chriss:hover {
+
+font-size: 10px;
+font-family: "Mukta";
+text-decoration: underline;
+}
+#animated-border-box > div > .biogg {
+
+text-align: center;
+font-size: 13px;
+font-family: "Mukta";
+text-decoration: none;
+color: #00c3ff;
+}
+#animated-border-box > div > .biogg:hover {
+
+font-size: 13px;
+font-family: "Mukta";
+text-decoration: underline;
+}
+
+#animated-border-box:before {
     content: '';
     position: absolute;
     top: 50%;
     left: 50%;
     width: 99999px;
     height: 99999px;
-    background-image: conic-gradient(rgba(0, 0, 0, 0), #d20ecb, rgba(0, 0, 0, 0) 25%);
+    background-image: conic-gradient(rgba(0, 0, 0, 0), #1993bc, rgba(0, 0, 0, 0) 25%);
     transform: translate(-50%, -50%) rotate(0deg);
     animation: rotate 4s linear infinite;
     z-index: -1;
+    border-radius: 7px;
+    
+
+
 }
 
-.animated-border-box:after {
+#animated-border-box:after {
     content: '';
     position: absolute;
     left: 5px;
@@ -409,11 +484,13 @@
     z-index: -1;
 }
 
-.animated-border-box:hover {
+#animated-border-box:hover {
+    transform: scale(1.1);
+    transition:  0.3s ease;
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.5),
-                0 0 25px rgba(167, 16, 180, 0.7),
-                0 0 35px rgba(221, 0, 255, 0.9),
-                0 0 45px rgb(183, 0, 255);
+                0 0 25px rgba(16, 142, 180, 0.7),
+                0 0 35px rgba(12, 239, 220, 0.502),
+                0 0 45px rgb(0, 200, 255);
 }
 
 @keyframes rotate {
